[Fix] Listing projets : suppression des scrollbars (visiblent sur PC)

--- a/app/scss/ssigur/layout/_projects.scss
+++ b/app/scss/ssigur/layout/_projects.scss
@@ -40,6 +40,11 @@
       background-position: center center;
 
       overflow: -moz-scrollbars-none;
+      -ms-overflow-style: none;
+      &::-webkit-scrollbar {
+        display: none;
+      }
+
 
       &::before{
         content: '';
